...
    }

    return (
      <View style={styles.mainContainer}>
        <Carousel<SlideItem>
          testID={
            isE2eTest ? "onboardingCarousel" : "onboardingCarouselOutsideE2e"
          }
          ref={(c: any) => {
            this._carousel = c;
          }}
          layout={"default"}
          data={SLIDES}
...
          inactiveDotScale={0.6}
          carouselRef={this._slider1Ref}
          tappableDots={!!this._slider1Ref}
        />
        <View style={styles.buttonContainer}>
          <Button
            testID="goToSignIn"
            title="Skip the introduction"
            onPress={() =>
              this.props.navigation.navigate("OnboardingSignInScreen")
            }
          />
        </View>
...
