...
              return (
                <>
                  <Label>Email</Label>
                  <FocusTextInput
                    autoCorrect={false}
                    keyboardType="email-address"
                    testID="userEmailOnboarding"
                    autoCapitalize="none"
                    placeholder="yourname@example.com"
                    placeholderTextColor={Colors.transparentWhite}
                    value={values.userEmail}
                    onChangeText={handleChange("userEmail")}
                    onBlur={handleBlur("userEmail")}
...
                  </ErrorText>
                  {isSubmitting ? (
                    <ActivityIndicator color={Colors.white} size="large" />
                  ) : (
                    <Button
                      disabled={!isValid}
                      testID="goToPending"
                      title="Send me my link"
                      onPress={handleSubmit}
                    />
                  )}
                </>
              );
...
